style: fix reddit icon not showing

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ code {
   flex-direction: row;
   align-items: center;
 }
-.reddit-icon{
+.reddit-svg-icon{
   width: 32px;
   margin: 8px;
   margin-left: 0px;
